@@ -1,3 +1,8 @@
+2004-05-14  MenTaLguY  <mental@rydia.net>
+
+	* src/display/nr-arena-shape.h, src/display/nr-arena-shape.cpp:
+	  further reduced dependency on SPStyle
+
 2004-05-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/libnr/nr-path.cpp, src/libnr/nr-path.h (nr_path_matrix_bbox_union):
